# mlops_hub

./: .eslintrc.js  .gitignore  AUTHENTICATION.md  README.md  jest.config.js  onboarding.md  package-lock.json  package.json
backend/: API_DOCUMENTATION.md  Dockerfile  README.md  dev.sh  init-multiple-databases.sh  keycloak-realm.json  pom.xml
backend/k8s/: namespace.yaml
backend/k8s/configmaps/: keycloak-realm.yaml  minio-init.yaml  mlops-config.yaml  postgres-init.yaml
backend/k8s/deployments/: backend.yaml  keycloak.yaml  minio.yaml  mlflow.yaml  postgres.yaml  ray.yaml
backend/k8s/ingress/: mlops-ingress.yaml
backend/k8s/secrets/: mlops-secrets.yaml
backend/src/main/java/com/mlops/hub/: MLOpsHubBackendApplication.java
backend/src/main/resources/: application.yml
backend/src/main/resources/db/migration/: V1__Create_tables.sql  V2__Create_inference_services_table.sql  V3__Create_entrypoints_table.sql  V4__Add_model_fields_to_entrypoints.sql  V5__Create_entrypoint_history_table.sql
backend/src/test/resources/: application-test.yml
docs/concepts/: MLOps_Practical_Guide.md
frontend/src/: setupTests.ts
frontend/src/components/UI/DataTable/: DataTable.tsx
frontend/src/components/UI/SearchBar/: SearchBar.tsx
frontend/src/config/: index.ts
frontend/src/pages/Activities/: Activities.tsx
frontend/src/pages/Dashboard/: Dashboard.tsx
frontend/src/pages/Datasets/: DatasetDetail.tsx
frontend/src/pages/Experiments/: ExperimentDetail.tsx  Experiments.tsx
frontend/src/pages/Home/: Home.tsx
frontend/src/pages/InferenceServices/: InferenceServiceDetail.tsx  InferenceServices.tsx
frontend/src/pages/Models/: ModelDetail.tsx
frontend/src/pages/Profile/: Profile.tsx
frontend/src/pages/Runs/: RunDetail.tsx
frontend/src/pages/Runs/__tests__/: ArtifactFileHandling.test.tsx  FileTypeDetection.test.ts
frontend/src/pages/Schedules/: ScheduleDetail.tsx
frontend/src/pages/Solutions/: Solutions.tsx
frontend/src/types/: index.ts
inference_server/: Dockerfile  README.md  dev.sh  environment.yml  register_hf_model_to_mlflow.py  requirements.txt
inference_server/app/: config.py  main.py  model_manager.py
ml_project_text_classification/: .cursorrules  .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  run.sh
ml_project_text_classification/src/: audit_data.py  cli.py  evaluate.py  predict.py  train.py
ml_project_text_classification/src/cli/: __init__.py  auth.py  dataset_cli.py  datasets.py  main.py
ml_project_text_classification/src/data/: dataset.py  loader.py
ml_project_text_classification/src/data/llm_router_dataset-synth/: test.jsonl  train.jsonl
ml_project_text_classification/src/models/: text_classifier.py
ml_project_text_classification/src/utils/: __init__.py  device.py  metrics.py  network.py
ml_project_text_classification/tests/: conftest.py  test_data_loading.py  test_dataset.py  test_device_utils.py  test_integration.py  test_metrics_utils.py  test_network_utils.py
public/: index.html  manifest.json
src/: App.tsx
src/components/Auth/: ProtectedRoute.tsx
src/components/Layout/: Layout.tsx
src/components/UI/AddEntrypointDialog/: AddEntrypointDialog.tsx
src/components/UI/AddServiceDialog/: AddServiceDialog.tsx
src/contexts/: AuthContext.tsx
src/pages/Datasets/: DatasetUpload.tsx  Datasets.tsx
src/pages/Entrypoints/: EntrypointDetail.tsx  Entrypoints.tsx
src/pages/Models/: Models.tsx
src/pages/Monitoring/: Monitoring.tsx  MonitoringDetail.tsx  ReportPage.tsx
src/pages/NotFound/: NotFound.tsx
src/pages/Runs/: Runs.tsx
src/pages/Runs/__tests__/: RunDetail.test.tsx
src/pages/Schedules/: Schedules.tsx
src/pages/Solutions/: SolutionDetail.tsx
src/services/: api.ts
src/services/__tests__/: api.test.ts
(+57 files in other folders)
